5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1649_1054.log
== TEST (2019-04-09 18:47:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta = 2*x + y = 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta = 2*x + y = 3
          ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:47:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta =2*x + y = 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta =2*x + y = 3
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:51:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta = y= -2*x+ 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- OUTPUT:
ponto nao pertence a reta
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:51:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta = y= -2*x+ 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- EXECUTION TIME:
0.150124
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto nao pertence a reta
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:51:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta = y= -2*x+ 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- OUTPUT:
ponto nao pertence a reta
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:52:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta = y= -2*x+ 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- EXECUTION TIME:
0.149739
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto nao pertence a reta
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:52:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
reta = y= -2*x+ 3
if(x==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
if(y==reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- OUTPUT:
ponto nao pertence a reta
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
if(y= -2*x+ 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- ERROR:
File "XXXX", line 6
    if(y= -2*x+ 3):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
if(y== -2*x+ 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:53:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
if(y== -2*x+ 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:53:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("digite o x : "))
y = float(input("digite o y : "))
if(y== -2*x+ 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")


-- EXECUTION TIME:
0.112048
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
